--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -27,25 +27,25 @@
 			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
-						<th>@Messages("questionFrom")</th>
-						<th>@Messages("question")</th>
+						<th class="q-creator">@Messages("questionFrom")</th>
+						<th class="q-text">@Messages("question")</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody class="row-link">
 				</tbody>
 			</table>
 			<div id="edit-question-current-none" style="display:none;">@Messages("noQuestions")</div>
 		</div>
 		<div id="edit-question-published">
-			<table class="table table-hover">
+			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
-						<th>@Messages("questionFrom")</th>
-						<th>@Messages("question")</th>
-						<th>@Messages("answerer")</th>
+						<th class="q-creator">@Messages("questionFrom")</th>
+						<th class="q-text">@Messages("question")</th>
+						<th class="q-answerer">@Messages("answerer")</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody class="row-link">
 				</tbody>
 			</table>
 		</div>
