--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -80,9 +80,10 @@ body {
 	top: 50%;
 	margin-left: -140px;
 	margin-top: -25px;
-	height: 50px; 
+	min-height: 50px; 
 	width: 280px;
 	border: solid 1;
+	border-radius: 4px;
 	background-color: #ddd;
 }
 @keyframes msg {
@@ -97,30 +98,37 @@ body {
   100%   { opacity:0; }
 }
 
-#msg-dialog span {
+#msg-dialog .message {
 	display: block;
 	text-align: center;
 	margin: 10px auto;
 }
 
-.chat-left {
+#msg-dialog .tweet {
+	margin-top: 5px;
+}
+
+#msg-dialog .tweet img {
+	float: left;
+	margin: 5px;
+}
+
+#msg-dialog .tweet p {
+	margin: 2px 10px;
+}
+
+td.chat-img {
+	width: 28px;
+}
+
+td.chat-left {
 	margin-left: 10px;
 	text-align: left;
-	width: 100%;
 }
 
-.chat-left img {
-	margin-right: 10px;
-}
-
-.chat-right {
+td.chat-right {
 	margin-right: 10px;
 	text-align: right;
-	width: 100%;
-}
-
-.chat-right img {
-	margin-left: 10px;
 }
 
 #chat-text-len {
