--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -2,7 +2,17 @@
 <div id="edit-event" class="workspace">
 	<h1>イベント管理</h1>
 	<div class="input-form">
-		<div>
+		<form id="event-form">
+			<div>
+				<label>定員</label>
+			</div>
+			<div>
+				<select class="form-control">
+					<option>20人</option>
+					<option>50人</option>
+					<option>100人</option>
+				</select>
+			</div>
 			<div class="form-group">
 				<label>タイトル</label>
 			</div>
@@ -22,16 +32,6 @@
 				<input class="form-control" type="time">
 			</div>
 			<div>
-				<label>定員</label>
-			</div>
-			<div>
-				<select class="form-control">
-					<option>20人</option>
-					<option>50人</option>
-					<option>100人</option>
-				</select>
-			</div>
-			<div>
 				<label>パスコード</label>
 			</div>
 			<div>
@@ -45,42 +45,6 @@
 				<button class="btn btn-primary">イベント開始</button>
 				<button class="btn btn-primary">変更を保存</button>
 			</div>
+		</form>
 	</div>
-	<h2>終了したイベント</h2>
-	<table class="table table-hover" id="tbl-event">
-		<thead>
-			<tr>
-				<th>タイトル</th>
-				<th>日時</th>
-				<th>参加者</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>ほげほげ</td>
-				<td>2014-02-14 19:00</td>
-				<td>13人</td>
-			</tr>
-			<tr>
-				<td>ほげほげ</td>
-				<td>2014-02-14 19:00</td>
-				<td>13人</td>
-			</tr>
-			<tr>
-				<td>ほげほげ</td>
-				<td>2014-02-14 19:00</td>
-				<td>13人</td>
-			</tr>
-			<tr>
-				<td>ほげほげ</td>
-				<td>2014-02-14 19:00</td>
-				<td>13人</td>
-			</tr>
-			<tr>
-				<td>ほげほげ</td>
-				<td>2014-02-14 19:00</td>
-				<td>13人</td>
-			</tr>
-		</tbody>
-	</table>
 </div>
