--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -104,6 +104,7 @@
 <script src="@routes.I18N.messages(lang.language)"></script>
 <script src="@routes.Assets.at("javascripts/flect.connection.js")"></script>
 <script src="@routes.Assets.at("javascripts/flect.template.js")"></script>
+<script src="@routes.Assets.at("javascripts/flect.messageDialog.js")"></script>
 <script src="@routes.Assets.at("javascripts/ws-quiz.js")"></script>
 <script>
 var app;
