--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -83,7 +83,7 @@
 				<li>@Messages("manageRoom")
 					<ul>
 						<li><a href="#edit-room" class="dynamic">@Messages("ui.editRoom")</a></li>
-						<li><a href="#event" class="dynamic">@Messages("editEvent")</a></li>
+						<li><a href="#edit-event" class="dynamic">@Messages("editEvent")</a></li>
 						<li><a href="#edit-question" class="dynamic">@Messages("editQuestion")</a></li>
 					</ul>
 				</li>
