--- a/app/views/makeQuestion.scala.html
+++ b/app/views/makeQuestion.scala.html
@@ -29,12 +29,12 @@
 			</div>
 			<div class="option-ctrl">
 				@Messages("options") 
-				<span id="make-q-option-btn">
+				<span>
 					<i class="fa fa-toggle-down fa-lg"></i>
 					<i class="fa fa-toggle-up fa-lg" style="display:none;"></i>
 				</span>
 			</div>
-			<div class="option-panel" id="make-q-option" style="display:none;">
+			<div class="option-panel" style="display:none;">
 				<div>
 					<label for="make-q-tags">@Messages("tags")</label>
 				</div>
