--- a/app/views/makeRoom.scala.html
+++ b/app/views/makeRoom.scala.html
@@ -16,12 +16,12 @@
 			</div>
 			<div class="option-ctrl">
 				@Messages("options") 
-				<span id="make-room-option-btn">
+				<span>
 					<i class="fa fa-toggle-down fa-lg"></i>
 					<i class="fa fa-toggle-up fa-lg" style="display:none;"></i>
 				</span>
 			</div>
-			<div class="option-panel" id="make-room-option" style="display:none;">
+			<div class="option-panel" style="display:none;">
 				<div>
 						<label for="room-tags">@Messages("tags")</label>
 				</div>
