--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -7,7 +7,7 @@
 				<label for="event-capacity">@Messages("capacity")</label>
 			</div>
 			<div>
-				<select id="event-capacity" class="form-control">
+				<select id="event-capacity" class="form-control auto-collect">
 					<option value="20">20 @Messages("people")</option>
 					<option value="50">50 @Messages("people")</option>
 					<option value="100">100 @Messages("people")</option>
@@ -17,7 +17,7 @@
 				<label for="event-title">@Messages("title")</label>
 			</div>
 			<div>
-				<input id="title" class="form-control">
+				<input id="event-title" class="form-control auto-collect">
 			</div>
 			<div class="option-ctrl">
 				@Messages("options") 
@@ -43,11 +43,11 @@
 					<label for="event-passcode">@Messages("passcode")</label>
 				</div>
 				<div>
-					<input id="event-passcode" class="form-control">
+					<input id="event-passcode" class="form-control auto-collect">
 				</div>
 				<div>
 					<label for="event-description">@Messages("description")</label>
-					<textarea id="event-description" rows="5" class="form-control"></textarea>
+					<textarea id="event-description" rows="5" class="form-control auto-collect"></textarea>
 				</div>
 			</div>
 			<div>
