--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -8,9 +8,9 @@
 			</div>
 			<div>
 				<select id="event-capacity" class="form-control auto-collect">
-					<option value="20">20 @Messages("people")</option>
-					<option value="50">50 @Messages("people")</option>
-					<option value="100">100 @Messages("people")</option>
+					<option value="20">20 @Messages("ui.people")</option>
+					<option value="50">50 @Messages("ui.people")</option>
+					<option value="100">100 @Messages("ui.people")</option>
 				</select>
 			</div>
 			<div class="form-group">
@@ -50,10 +50,10 @@
 					<textarea id="event-description" rows="5" class="form-control auto-collect"></textarea>
 				</div>
 			</div>
-			<div>
-				<button id="event-start-btn">@Messages("startEvent")</button>
-				<button id="event-update-btn">@Messages("save")</button>
-			</div>
 		</form>
+		<div>
+			<button id="event-start-btn">@Messages("startEvent")</button>
+			<button id="event-update-btn">@Messages("save")</button>
+		</div>
 	</div>
 </div>
