--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,7 +37,7 @@
 							<tr data-room="@room.id">
 								<td class="event-date">@room.event.map(_.execDate.toString).getOrElse(Messages("ui.undecided"))</td>
 								<td class="event-title">@room.name @room.event.flatMap(_.title).map("(" + _ + ")")</td>
-								<td class="event-capacity">@room.event.map(_.capacity + Messages("people"))</td>
+								<td class="event-capacity">@room.event.map(_.capacity + Messages("ui.people"))</td>
 							</tr>
 						}
 					</tbody>
@@ -57,7 +57,7 @@
 							<tr data-room="@room.id">
 								<td class="event-date">@room.event.map(_.execDate.toString).getOrElse(Messages("ui.undecided"))</td>
 								<td class="event-title">@room.name @room.event.map("(" + _.title + ")")</td>
-								<td class="event-capacity">@room.event.map(_.capacity + Messages("people"))</td>
+								<td class="event-capacity">@room.event.map(_.capacity + Messages("ui.people"))</td>
 							</tr>
 						}
 					</tbody>
