--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -35,7 +35,7 @@
 					<tbody>
 						@rooms.map { room =>
 							<tr data-room="@room.id">
-								<td class="event-date">@room.event.map(_.execDate.toString).getOrElse(Messages("ui.undecided"))</td>
+								<td class="event-date">@room.event.map(_.execDate.map(_.toString("M/d HH:mm")).getOrElse(Messages("ui.undecided")))</td>
 								<td class="event-title">@room.name @room.event.flatMap(_.title).map("(" + _ + ")")</td>
 								<td class="event-capacity">@room.event.map(_.capacity + Messages("ui.people"))</td>
 							</tr>
@@ -55,7 +55,7 @@
 					<tbody>
 						@yours.map { room =>
 							<tr data-room="@room.id">
-								<td class="event-date">@room.event.map(_.execDate.toString).getOrElse(Messages("ui.undecided"))</td>
+								<td class="event-date">@room.event.map(_.execDate.map(_.toString()).getOrElse(Messages("ui.undecided")))</td>
 								<td class="event-title">@room.name @room.event.map("(" + _.title + ")")</td>
 								<td class="event-capacity">@room.event.map(_.capacity + Messages("ui.people"))</td>
 							</tr>
