--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -52,7 +52,7 @@
 			</div>
 		</form>
 		<div>
-			<button id="event-start-btn">@Messages("startEvent")</button>
+			<button id="event-toggle-btn">@Messages("ui.start")</button>
 			<button id="event-update-btn">@Messages("save")</button>
 		</div>
 	</div>
