--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -96,6 +96,7 @@
 	</ul>
 </div>
 <div id="msg-dialog" style="display:none;"><span></span></div>
+<div id="effect-dialog" style="display:none;"><span class="message"></span></div>
 <script src="@routes.Assets.at("javascripts/ext/sidr/jquery.sidr.min.js")"></script>
 <script src="@routes.Assets.at("javascripts/ext/touchSwipe/jquery.touchSwipe.js")"></script>
 <script src="@routes.Assets.at("javascripts/ext/animatedtablesorter/tsort.min.js")"></script>
