--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/redmond/jquery-ui.css" />
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("javascripts/ext/animateDialog/jquery.animateDialog.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+<script src="@routes.Assets.at("javascripts/ext/animateDialog/jquery.animateDialog.js")"></script>
 <title>@title</title>
 </head>
 <body>
