--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -24,27 +24,20 @@
 				<li><a href="#event-yours">@Messages("yourEvents")</a></li>
 			</ul>
 			<div id="event-future">
-				<table class="table-hover">
+				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th class="event-date">@Messages("datetime")</th>
+							<th class="event-date">@Messages("scheduledDate")</th>
 							<th class="event-title">@Messages("title")</th>
 							<th class="event-capacity">@Messages("capacity")</th>
 						</tr>
 					</thead>
 					<tbody>
-						@rooms.map { room =>
-							<tr data-room="@room.id">
-								<td class="event-date">@room.event.map(_.execDate.map(_.toString("M-d HH:mm")).getOrElse(Messages("ui.undecided")))</td>
-								<td class="event-title">@room.name @room.event.flatMap(_.title).map("(" + _ + ")")</td>
-								<td class="event-capacity">@room.event.map(_.capacity + Messages("ui.people"))</td>
-							</tr>
-						}
 					</tbody>
 				</table>
 			</div>
 			<div id="event-yours">
-				<table class="table-hover">
+				<table class="table table-hover">
 					<thead>
 						<tr>
 							<th class="event-date">@Messages("datetime")</th>
@@ -53,13 +46,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						@yours.map { room =>
-							<tr data-room="@room.id">
-								<td class="event-date">@room.event.map(_.execDate.map(_.toString()).getOrElse(Messages("ui.undecided")))</td>
-								<td class="event-title">@room.name @room.event.map("(" + _.title + ")")</td>
-								<td class="event-capacity">@room.event.map(_.capacity + Messages("ui.people"))</td>
-							</tr>
-						}
 					</tbody>
 				</table>
 			</div>
