--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -822,3 +822,8 @@ th.q-answerer, td.q-answerer { width: 60px;}
 .entry-event {
 	display: none;
 }
+
+.btn-question {
+  width: 100%;
+  margin-top: 10px;
+}
