--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -827,3 +827,23 @@ th.q-answerer, td.q-answerer { width: 60px;}
   width: 100%;
   margin-top: 10px;
 }
+
+#publish-question-seq {
+  width: 100%;
+  text-align: center;
+  background-color: #ffdddf;
+  font-size: 36px;
+  animation-name: "inout";
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-delay: 0;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  -webkit-animation-name: "inout";
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-delay: 0;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: alternate;
+
+}
