--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -1,18 +1,40 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="publish-question">
-	<h1>問題</h1>
+	<div id="publish-question-seq">問題</div>
 	<div class="progress">
 		<div id="progress" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
 		</div>
 	</div>
 	<p id="question-text">
 	</p>
-	@((0 to 4).map { n =>
-		<div>
-			<button id="answer-@n" class="btn btn-question">
-				<div style="float:left;" class="answer">###</div>
-				<div style="float:right;" class="answer-cnt">###</div>
-			</button>
-		</div>
-	})
+	<div>
+		<button id="answer-0" class="btn btn-question">
+			<div style="float:left;" class="answer"></div>
+			<div style="float:right;" class="answer-cnt"></div>
+		</button>
+	</div>
+	<div>
+		<button id="answer-1" class="btn btn-question">
+			<div style="float:left;" class="answer"></div>
+			<div style="float:right;" class="answer-cnt"></div>
+		</button>
+	</div>
+	<div>
+		<button id="answer-2" class="btn btn-question">
+			<div style="float:left;" class="answer"></div>
+			<div style="float:right;" class="answer-cnt"></div>
+		</button>
+	</div>
+	<div>
+		<button id="answer-3" class="btn btn-question">
+			<div style="float:left;" class="answer"></div>
+			<div style="float:right;" class="answer-cnt"></div>
+		</button>
+	</div>
+	<div>
+		<button id="answer-4" class="btn btn-question">
+			<div style="float:left;" class="answer"></div>
+			<div style="float:right;" class="answer-cnt"></div>
+		</button>
+	</div>
 </div>
