--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -2,7 +2,9 @@
 <div id="publish-question">
 	<div id="publish-question-seq">問題</div>
 	<div class="progress">
-		<div id="progress" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+		<div id="question-progress" class="progress-bar progress-bar-success" role="progressbar" style="width: 100%">
+		</div>
+		<div id="question-progress-answered" class="progress-bar progress-bar-info" role="progressbar" style="width: 0%">
 		</div>
 	</div>
 	<p id="question-text">
