--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -1111,6 +1111,8 @@ td.chat-right {
 th.event-date, td.event-date { width: 100px;}
 th.event-capacity, td.event-capacity { width: 40px;}
 
+td.event-title img { padding-right: 5px;}
+
 th.q-creator, td.q-creator { width: 40px;}
 th.q-text, td.q-text {
 	white-space: nowrap;
