Add Grunt and divide ws-quiz.js

--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -113,10 +113,7 @@
 <script src="@routes.Assets.at("javascripts/ext/bootstrap-switch/js/bootstrap-switch.min.js")"></script>
 <script src="@routes.Assets.at("javascripts/ext/jquery-validation/jquery.validate.min.js")"></script>
 <script src="@routes.I18N.messages(lang.language)"></script>
-<script src="@routes.Assets.at("javascripts/flect.connection.js")"></script>
-<script src="@routes.Assets.at("javascripts/flect.template.js")"></script>
-<script src="@routes.Assets.at("javascripts/flect.messageDialog.js")"></script>
-<script src="@routes.Assets.at("javascripts/ws-quiz.js")"></script>
+<script src="@routes.Assets.at("javascripts/quizar.js")"></script>
 <script>
 var app;
 $(function() {
