--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -1121,6 +1121,13 @@ th.q-text, td.q-text {
 }
 th.q-answerer, td.q-answerer { width: 60px;}
 
+th.rank, td.rank { width: 50px;}
+th.correctCount, td.correctCount { width: 50px;}
+th.time, td.time { width: 80px;}
+td.correctCount, td.time { text-align: right;}
+
+td.username img { padding-right: 10px;}
+
 .input-form label {
 	display: block;
 	margin-top: 10px;
