--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -37,10 +37,10 @@
 	<div class="toolbar-content">
 		@roomInfo.map { room =>
 			<div id="room-icons">
-				<button type="button" id="btn-question">
+				<button type="button" id="toolbar-question">
 					<i class="fa fa-check-circle fa-lg"></i>
 				</button>
-				<button type="button" id="btn-ranking">
+				<button type="button" id="toolbar-ranking">
 					<i class="fa fa-star fa-lg"></i>
 				</button>
 				<button type="button" id="btn-chat" class="menu-chat">
