--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -25,10 +25,10 @@
 			<table class="table table-hover" id="ranking-event-tbl">
 				<thead>
 					<tr>
-						<th class="date">@Messages("date")</th>
-						<th class="eventName">@Messages("eventName")</th>
+						<th class="title">@Messages("title")</th>
 						<th class="username">@Messages("winner")</th>
 						<th class="correctCount">@Messages("correctCount")</th>
+						<th class="time">@Messages("time")</th>
 					</tr>
 				</thead>
 				<tbody>
